--- a/client/home.html
+++ b/client/home.html
@@ -46,10 +46,10 @@
                         <div class="row">
                             {{#each certificates}}
                             <div class="col-md-6 col-lg-4">
-                                <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image1.jpg" alt="Card Image"></a>
+                                <div class="card border-0"><a href="{{link}}"><embed class="card-img-top scale-on-hover" src="{{link}}" alt="Card Image" /></a>
                                     <div class="card-body">
-                                        <h6><a href="#">Lorem Ipsum</a></h6>
-                                        <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                        <h6><a href="#">{{title}}</a></h6>
+                                        <p class="text-muted card-text">{{desc}}</p>
                                     </div>
                                 </div>
                             </div>
