Gave up on self hosting, providing image link instead

--- a/client/home.html
+++ b/client/home.html
@@ -46,7 +46,7 @@
                         <div class="row">
                             {{#each certificates}}
                             <div class="col-md-6 col-lg-4">
-                                <div class="card border-0"><a href="{{link}}"><embed class="card-img-top scale-on-hover" src="{{link}}" alt="Card Image" /></a>
+                                <div class="card border-0"><a href="{{link}}"><img class="card-img-top scale-on-hover" src="{{img}}" alt="Card Image" /></a>
                                     <div class="card-body">
                                         <h6><a href="#">{{title}}</a></h6>
                                         <p class="text-muted card-text">{{desc}}</p>
@@ -63,7 +63,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-12 col-lg-5 offset-lg-1 text">
                             <h3>Upside Down?</h3>
-                            <p>Click the laptop to joine me &nbsp;Down Under. Don't worry the spiders are friendly.</p>
+                            <p>Click the laptop to join me Down Under. Don't worry the spiders are friendly.</p>
                         </div>
                         <div class="col-md-12 col-lg-5">
                             <div class="portfolio-laptop-mockup">
