--- a/client/admin.html
+++ b/client/admin.html
@@ -1,16 +1,17 @@
 <template name ="admin">
-
+{{#if currentUser}}
     <main class="page contact-page">
         <section class="portfolio-block contact">
             <div class="container">
                 <div class="heading">
                     <h2>New Certificate</h2>
                 </div>
-                <form>
-                    <div class="form-group"><label for="title">Title</label><input class="form-control item" type="text" id="title"></div>
-                    <div class="form-group"><label for="description">Description</label><input class="form-control item" type="text" id="description"></div>
-                    <div class="form-group"><label for="link">Link to Certificate</label><input class="form-control item" type="link" id="email"></div>
-                    <div class = "form-group custom-file" ><label for="fileInput">Upload Image</label><input id="fileInput" type="file" class="form-control item custom-file-input"/></div>
+                <form id = "newCertificate">
+                    <div class="form-group"><label for="certTitle">Title</label><input class="form-control item" type="text" id="certTitle"></div>
+                    <div class="form-group"><label for="certDesc">Description</label><input class="form-control item" type="text" id="certDesc"></div>
+                    <div class="form-group"><label for="certLink">Link to Certificate</label><input class="form-control item" type="link" id="certLink"></div>
+                    <div class="form-group"><label for="certImage">Link to Image</label><input class="form-control item" type="link" id="certImage"></div>
+
                   
                     <div class="form-group"><button class="btn btn-primary btn-block btn-lg" type="submit">Submit Form</button></div>
                 </form>
@@ -19,19 +20,22 @@
         <section class="portfolio-block contact">
                 <div class="container">
                     <div class="heading">
-                        <h2>New Certificate</h2>
+                        <h2>New Project</h2>
                     </div>
-                    <form>
-                        <div class="form-group"><label for="title">Title</label><input class="form-control item" type="text" id="title"></div>
-                        <div class="form-group"><label for="description">Description</label><input class="form-control item" type="text" id="description"></div>
-                        <div class="form-group"><label for="link">Link to Certificate</label><input class="form-control item" type="link" id="email"></div>
-                        <div class = "form-group custom-file" ><label for="fileInput">Upload Image</label><input id="fileInput" type="file" class="form-control item custom-file-input"/></div>
-                      
+                    <form id = "newProject"> 
+                        <div class="form-group"><label for="projectTitle">Title</label><input class="form-control item" type="text" id="projectTitle"></div>
+                        <div class="form-group"><label for="projectDesc">Description</label><input class="form-control item" type="text" id="projectDesc"></div>
+                        <div class="form-group"><label for="projectLink">Link to Project (GitHub)</label><input class="form-control item" type="link" id="projectLink"></div>
+                        <div class="form-group"><label for="projectCategory">Category</label><input class="form-control item" type="link" id="projectCategory"></div>
+
                         <div class="form-group"><button class="btn btn-primary btn-block btn-lg" type="submit">Submit Form</button></div>
                     </form>
                 </div>
             </section>
     </main>
+{{else}}
 
+{{>loginButtons}}
+{{/if}}
 
 </template>
