Added more admin functionality

--- a/client/index.html
+++ b/client/index.html
@@ -16,3 +16,6 @@
     {{> nav}}
     {{> yield}}
 </template>
+<template name = "wrongPage">
+    <h1>Uh oh Something went wrong there. Head back home!</h1>
+</template>
