--- a/client/admin.html
+++ b/client/admin.html
@@ -32,6 +32,19 @@
                     </form>
                 </div>
             </section>
+            <section class="portfolio-block contact">
+                    <div class="container">
+                        <div class="heading">
+                            <h2>New Blog Post</h2>
+                        </div>
+                        <form id = "newBlog"> 
+                            <div class="form-group"><label for="blogTitle">Title</label><input class="form-control item" type="text" id="blogTitle"></div>
+                            <div class="form-group"><label for="blogDesc">Description</label><input class="form-control item" type="text" id="blogDesc"></div>
+    
+                            <div class="form-group"><button class="btn btn-primary btn-block btn-lg" type="submit">Submit Form</button></div>
+                        </form>
+                    </div>
+                </section>
     </main>
 {{else}}
 
