--- a/client/admin.html
+++ b/client/admin.html
@@ -10,7 +10,7 @@
                     <div class="form-group"><label for="certTitle">Title</label><input class="form-control item" type="text" id="certTitle"></div>
                     <div class="form-group"><label for="certDesc">Description</label><input class="form-control item" type="text" id="certDesc"></div>
                     <div class="form-group"><label for="certLink">Link to Certificate</label><input class="form-control item" type="link" id="certLink"></div>
-                    <div class="form-group"><label for="certImage">Link to Image</label><input class="form-control item" type="link" id="certImage"></div>
+                    <div class="form-group"><label for="certImage">Link to Image</label><input class="form-control item" type="file" id="certImage"></div>
 
                   
                     <div class="form-group"><button class="btn btn-primary btn-block btn-lg" type="submit">Submit Form</button></div>
