File uploads implemented via UploadCare

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Felix O'Brien</title>
-
+    <script>
+            UPLOADCARE_PUBLIC_KEY = 'a43821ed5169e7b1469d';
+    </script> 
+          
 </head>
 
 <body>
