--- a/client/admin.html
+++ b/client/admin.html
@@ -1,18 +1,31 @@
 <template name ="admin">
 {{#if currentUser}}
-    <main class="page contact-page">
-        <section class="portfolio-block contact">
+<main class="page contact-page">
+    <section class="portfolio-block contact">
+        <div class="container">
+            <div class="heading">
+                <h2>New Certificate</h2>
+            </div>
+            <form id = "newCertificate">
+                <div class="form-group"><label for="certTitle">Title</label><input class="form-control item" type="text" id="certTitle"></div>
+                <div class="form-group"><label for="certDesc">Description</label><input class="form-control item" type="text" id="certDesc"></div>
+                <div class="form-group"><label for="certLink">Link to Certificate</label><input class="form-control item" type="link" id="certLink"></div>
+                <div class="form-group"><input type="hidden" role="uploadcare-uploader" name="my_file" id= "certImage"/></div>
+            <div class="form-group"><button class="btn btn-primary btn-block btn-lg" type="submit">Submit Form</button></div>
+            </form>
+        </div>
+    </section>
+    <section class="portfolio-block contact">
             <div class="container">
                 <div class="heading">
-                    <h2>New Certificate</h2>
+                    <h2>New Project</h2>
                 </div>
-                <form id = "newCertificate">
-                    <div class="form-group"><label for="certTitle">Title</label><input class="form-control item" type="text" id="certTitle"></div>
-                    <div class="form-group"><label for="certDesc">Description</label><input class="form-control item" type="text" id="certDesc"></div>
-                    <div class="form-group"><label for="certLink">Link to Certificate</label><input class="form-control item" type="link" id="certLink"></div>
-                    <div class="form-group"><input type="hidden" role="uploadcare-uploader" name="my_file" id= "certImage"/></div>
+                <form id = "newProject"> 
+                    <div class="form-group"><label for="projectTitle">Title</label><input class="form-control item" type="text" id="projectTitle"></div>
+                    <div class="form-group"><label for="projectDesc">Description</label><input class="form-control item" type="text" id="projectDesc"></div>
+                    <div class="form-group"><label for="projectLink">Link to Project (GitHub)</label><input class="form-control item" type="link" id="projectLink"></div>
+                    <div class="form-group"><label for="projectCategory">Category</label><input class="form-control item" type="link" id="projectCategory"></div>
 
-                  
                     <div class="form-group"><button class="btn btn-primary btn-block btn-lg" type="submit">Submit Form</button></div>
                 </form>
             </div>
@@ -20,35 +33,20 @@
         <section class="portfolio-block contact">
                 <div class="container">
                     <div class="heading">
-                        <h2>New Project</h2>
+                        <h2>New Blog Post</h2>
                     </div>
-                    <form id = "newProject"> 
-                        <div class="form-group"><label for="projectTitle">Title</label><input class="form-control item" type="text" id="projectTitle"></div>
-                        <div class="form-group"><label for="projectDesc">Description</label><input class="form-control item" type="text" id="projectDesc"></div>
-                        <div class="form-group"><label for="projectLink">Link to Project (GitHub)</label><input class="form-control item" type="link" id="projectLink"></div>
-                        <div class="form-group"><label for="projectCategory">Category</label><input class="form-control item" type="link" id="projectCategory"></div>
-
+                    <form id = "newBlog"> 
+                        <div class="form-group"><label for="blogTitle">Title</label><input class="form-control item" type="text" id="blogTitle"></div>
+                        <div class="form-group"><label for="blogDesc">Content</label><textarea class="form-control item" type="text" id="blogDesc"></textarea></div>
                         <div class="form-group"><button class="btn btn-primary btn-block btn-lg" type="submit">Submit Form</button></div>
                     </form>
                 </div>
             </section>
-            <section class="portfolio-block contact">
-                    <div class="container">
-                        <div class="heading">
-                            <h2>New Blog Post</h2>
-                        </div>
-                        <form id = "newBlog"> 
-                            <div class="form-group"><label for="blogTitle">Title</label><input class="form-control item" type="text" id="blogTitle"></div>
-                            <div class="form-group"><label for="blogDesc">Description</label><input class="form-control item" type="text" id="blogDesc"></div>
-    
-                            <div class="form-group"><button class="btn btn-primary btn-block btn-lg" type="submit">Submit Form</button></div>
-                        </form>
-                    </div>
-                </section>
-    </main>
+</main>
 {{else}}
-
-{{>loginButtons}}
+    {{>loginButtons}}
 {{/if}}
+
+
 
 </template>
