--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,11 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Felix O'Brien">
+    <meta name="keywords" content="Felix O'Brien,Coding,Programmer,Software Developer">
+    <meta name="author" content="Felix O'Brien">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>Felix O'Brien</title>
     <script>
             UPLOADCARE_PUBLIC_KEY = 'a43821ed5169e7b1469d';
