--- a/client/home.html
+++ b/client/home.html
@@ -2,7 +2,7 @@
         <main class="page lanidng-page">
                 <section class="portfolio-block block-intro">
                     <div class="container">
-                        <div class="avatar" style="background-image:url(&quot;assets/img/identicon.png&quot;);"></div>
+                        <div class="avatar" style="background-image:url(&quot;/assets/img/identicon.png&quot;);"></div>
                         <div class="about-me">
                             <h1>FELIX O'BRIEN</h1>
                             <p>SOFTWARE DEVELOPER</p>
