Fixed small bugs, image loading, blog date

--- a/client/home.html
+++ b/client/home.html
@@ -35,7 +35,11 @@
                 <section class="portfolio-block call-to-action border-bottom">
                     <div class="container">
                         <div class="d-flex justify-content-center align-items-center content">
-                            <h3>Like what you see?</h3><button href="/contact" class="btn btn-outline-primary btn-lg" type="button">Contact me</button></div>
+                            <h3>Like what you see?</h3>
+                            <a href="/contact">
+                            <button class="btn btn-outline-primary btn-lg" type="button">Contact me</button>
+                            </a>
+                        </div>
                     </div>
                 </section>
                 <section class="portfolio-block skills">
@@ -68,7 +72,7 @@
                         <div class="col-md-12 col-lg-5">
                             <div class="portfolio-laptop-mockup">
                                 <div class="screen">
-                                    <div class="screen-content" style="background-image:url(&quot;assets/img/aussie.svg&quot;);"></div>
+                                    <div class="screen-content" style="background-image:url(&quot;/assets/img/aussie.svg&quot;);"></div>
                                 </div>
                                 <div class="keyboard"></div>
                             </div>
