--- a/client/blog.html
+++ b/client/blog.html
@@ -10,7 +10,7 @@
             <div class="project-card-no-image">
                 <h3>{{title}}</h3>
                 <h4>{{shorten content}}</h4><a class="btn btn-outline-primary btn-sm" role="button">See More</a>
-                <div class="tags"><a href="#">{{dateHandler created}}</a></div>
+                <div class="tags date"><a href="#">{{dateHandler created}}</a></div>
             </div>
             </a>
         </div>
