--- a/client/manager.html
+++ b/client/manager.html
@@ -1,5 +1,6 @@
 <template name = "manager">
     <main class="page lanidng-page">
+        {{#if currentUser}}
         <section class="portfolio-block contact">
             <div class = "container">
                 <h1 class = 'center'>Edit Projects</h1>
@@ -24,7 +25,8 @@
                     {{/each}}
                     </div>
             </div>
-        </section>        
+        </section>   
+        {{/if}}     
     </main>
 </template>
 <template name = "editProject">
@@ -35,12 +37,12 @@
                         <h2>Edit Project</h2>
                     </div>
                     {{#with project}}
-                    <form id = "editProject"> 
+                    <form id = "editProjectForm"> 
                         <div class="form-group"><label for="projectTitle">Title</label><input class="form-control item" type="text" id="projectTitle" value="{{title}}"></div>
                         <div class="form-group"><label for="projectDesc">Description</label><input class="form-control item" type="text" id="projectDesc" value="{{desc}}"></div>
                         <div class="form-group"><label for="projectLink">Link to Project (GitHub)</label><input class="form-control item" type="link" id="projectLink" value="{{link}}"></div>
                         <div class="form-group"><label for="projectCategory">Category</label><input class="form-control item" type="link" id="projectCategory" value="{{category}}"></div>
-                        <div class="form-group"><label for="projectTitle">Title</label><input class="form-control item" type="text" id="projectId" value="{{_id}}" disabled></div>
+                        <div class="form-group"><label for="projectId">ID</label><input class="form-control item" type="text" id="projectId" value="{{_id}}" disabled></div>
                         <div class="form-group"><button class="btn btn-primary btn-block btn-lg" type="submit">Submit Form</button></div>
                     </form>
                     {{/with}}
@@ -68,5 +70,6 @@
                 {{/with}}
             </div>
         </section>
+
     </main>
 </template>
